# aven-lang

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  heavy.yml
crates/aven-check/: Cargo.toml
crates/aven-check/src/: checker.rs  comptime.rs  env.rs  host_comptime.rs  lib.rs  lower.rs  productivity.rs  tests.rs  ty.rs  unify.rs
crates/aven-check/src/checker/: annotations.rs  comptime_context.rs  constraints.rs  core.rs  diagnostics.rs  inference.rs  match_checking.rs  method_sets.rs  rows.rs  type_checking.rs  value.rs
crates/aven-check/tests/: fixtures.rs
crates/aven-check/tests/fixtures/check/invalid/: alias-mismatch.av  alias-mismatch.diag  boolean-is-unknown.av  boolean-is-unknown.diag  bound-local-binders.diag  call-arg-arity-expression.av  call-arg-arity-expression.diag  call-arg-array.av  call-arg-array.diag  call-arg-binop.av  call-arg-curried.av  call-arg-curried.diag  call-arg-higher-order.av  call-arg-higher-order.diag  call-arg-match-subject.av  call-arg-nested.av  call-arg-nested.diag  call-arg-record.av  call-arg-record.diag  call-arg-tuple.av  closed-row-transform-conflicts.av  closed-row-transform-conflicts.diag  closed-variant-non-exhaustive.av  closed-variant-non-exhaustive.diag  closed-variant-superset-into-narrow-annotation.av  closed-variant-superset-into-narrow-annotation.diag  comptime-drop-key-out-of-domain.av  comptime-drop-key-out-of-domain.diag  comptime-fn-non-member.av  comptime-fn-non-member.diag  comptime-fn-recursion.av  comptime-fn-recursion.diag  comptime-keysof-non-member.av  comptime-keysof-non-member.diag  comptime-keysof-non-record.av  comptime-keysof-non-record.diag  comptime-merge-collision.av  comptime-merge-collision.diag  comptime-merge-mismatch.av  comptime-merge-mismatch.diag  (+144 more)
crates/aven-check/tests/fixtures/check/valid/: binding-forms.av  bound-comptime-builtins.av  bound-host-global.av  bound-local-binders.av  bound-self-recursion.av  call-arg-expression-positions.av  closed-row-transforms.av  comptime-bindings-no-eval.av  comptime-drop-key.av  comptime-fn-keyunion.av  comptime-implicit-type-vars.av  comptime-keysof-record.av  comptime-liftable-into-runtime.av  comptime-merge-overwrite.av  comptime-merge.av  comptime-omit-filter.av  comptime-omit.av  comptime-param-get.av  comptime-partial-binding.av  comptime-partial.av  comptime-pick.av  comptime-required.av  comptime-tagsof-iteration.av  comptime-tagsof-param-set.av  comptime-tagsof-variant.av  comptime-type-map.av  comptime-typeof-direct.av  comptime-typeof.av  explicit-shadow-fresh-type.av  field-access-row-polymorphism.av  literal-match-exhaustive.av  literal-set-equality.av  literal-types.av  literal-union-member-binding.av  local-spread-merge.av  nullability.av  numeric-defaulting.av  open-record-subtyping.av  open-row-transforms.av  optional-field-omission.av  (+21 more)
crates/aven-cli/: Cargo.toml
crates/aven-cli/src/: main.rs
crates/aven-cli/tests/: custom_operators.rs  examples.rs  fmt.rs  std_library.rs
crates/aven-compiler/: Cargo.toml
crates/aven-compiler/src/: lib.rs  modules.rs  operator_config.rs  runtime_types.rs
crates/aven-compiler/tests/: modules.rs
crates/aven-core/: Cargo.toml
crates/aven-core/src/: codes.rs  diagnostic.rs  explain.rs  lib.rs  source.rs  span.rs
crates/aven-eval/: Cargo.toml
crates/aven-eval/src/: display.rs  lib.rs  logging.rs  tests.rs
crates/aven-eval/tests/fixtures/: custom-operator-method.av
crates/aven-fmt/: Cargo.toml
crates/aven-fmt/src/: lib.rs
crates/aven-fmt/tests/: fixtures.rs  properties.rs
crates/aven-fmt/tests/fixtures/: README.md
crates/aven-fmt/tests/fixtures/valid/: array-spread.fmt  binding-forms.av  binding-forms.fmt  colons-and-annotations.av  colons-and-annotations.fmt  comments-and-blanks.av  comments-and-blanks.fmt  comptime-param.av  comptime-param.fmt  computed-delete.av  computed-delete.fmt  computed-field-add.av  computed-field-add.fmt  explicit-shadow-binding.av  explicit-shadow-binding.fmt  inline-match.av  inline-match.fmt  named-primitive-family.av  named-primitive-family.fmt  nested-blocks.av  nested-blocks.fmt  operator-method-requirements.av  operator-method-requirements.fmt  parenthesized-inline-match.av  quoted-field-forms.av  quoted-field-forms.fmt  record-comprehension.av  record-comprehension.fmt  record-multi-method.fmt  simple-expressions.av  simple-expressions.fmt  string-interpolation.av  string-interpolation.fmt  value-keywords.av
crates/aven-host/: Cargo.toml
crates/aven-host/src/: http.rs  io.rs  json.rs  lib.rs  marshal.rs  temporal.rs  text_format.rs  toml_format.rs  yaml.rs
crates/aven-host/std/: array.av  clock.av  map.av  result.av  std.av  time.av  zones.av
crates/aven-lsp/: Cargo.toml
crates/aven-lsp/src/: lib.rs  semantic_tokens.rs  tests.rs
crates/aven-lsp/tests/fixtures/check-surfaces/: README.md  binding-forms.hover  bound-host-global.hover  bound-local-binders.hover  literal-types.hover  nullability.hover  string-interpolation.hover  value-keywords.hover  variant-match-exhaustiveness.hover
crates/aven-lsp/tests/fixtures/user-surfaces/: README.md  array-methods.av  array-methods.hover  map-value.av  map-value.hover  result-open.av  result-open.hover  user-record-fn.av  user-record-fn.hover
crates/aven-parser/: Cargo.toml
crates/aven-parser/src/: declarations.rs  fixity.rs  items.rs  layout.rs  lexer.rs  lib.rs  names.rs  operators.rs  parser.rs  resolve.rs  strings.rs  walk.rs
crates/aven-parser/tests/: fixtures.rs  properties.rs
crates/aven-parser/tests/fixtures/: README.md
crates/aven-parser/tests/fixtures/declarations/valid/: overload-shapes.av  overload-shapes.decl  top-level.av  top-level.decl
docs/: agent-syntax-ergonomics.md  tooling-first-plan.md  type-syntax-design.md
editors/: README.md
editors/nvim/: aven.lua
examples/: dynamic-json.av  encode-sugar.av  errors.av  file-pipeline.av  hello.av  http-fetch.av  http-post.av  json.av  literal-modes.av  logging.av  maps.av  modules.av  records.av  stdlib-tour.av  toml.av  yaml.av
examples/modules/: text.av
(+157 files in other folders)
