[workspace]
members = [
  "crates/aven-cli",
  "crates/aven-core",
  "crates/aven-fmt",
  "crates/aven-lsp",
  "crates/aven-parser",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/dbalmain/aven-lang"
rust-version = "1.91"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
aven-core = { path = "crates/aven-core" }
aven-fmt = { path = "crates/aven-fmt" }
aven-lsp = { path = "crates/aven-lsp" }
aven-parser = { path = "crates/aven-parser" }
clap = { version = "4.5.38", features = ["derive"] }
codespan-reporting = "0.11.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"

