[workspace]
members = [
  "crates/aven-check",
  "crates/aven-compiler",
  "crates/aven-cli",
  "crates/aven-core",
  "crates/aven-eval",
  "crates/aven-fmt",
  "crates/aven-host",
  "crates/aven-lsp",
  "crates/aven-parser",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/dbalmain/aven-lang"
rust-version = "1.91"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.102"
ariadne = "0.6.0"
aven-check = { path = "crates/aven-check" }
aven-compiler = { path = "crates/aven-compiler" }
aven-core = { path = "crates/aven-core" }
aven-eval = { path = "crates/aven-eval" }
aven-fmt = { path = "crates/aven-fmt" }
aven-host = { path = "crates/aven-host" }
aven-lsp = { path = "crates/aven-lsp" }
aven-parser = { path = "crates/aven-parser" }
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-std", "macros", "rt-multi-thread", "time"] }
toml = "1.1.3"
tower = { version = "0.4.13", default-features = false }
tower-lsp = "0.20.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
