[package]
name = "aven-compiler"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
aven-check.workspace = true
aven-core.workspace = true
aven-eval.workspace = true
aven-parser.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

[dev-dependencies]
aven-host.workspace = true
