[package]
name = "aven-fmt"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
aven-core.workspace = true
aven-parser.workspace = true

[dev-dependencies]
proptest.workspace = true
