[package]
name = "aven-host"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
aven-check.workspace = true
aven-eval.workspace = true
serde_json.workspace = true
ureq = "2.12"

[dev-dependencies]
aven-core.workspace = true
aven-parser.workspace = true
