[package]
name = "aven-host"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
aven-check.workspace = true
aven-eval.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway = "0.9.42"
toml = "1.0.3"
tz-rs = "0.7.3"
ureq = "3"

[dev-dependencies]
aven-core.workspace = true
aven-parser.workspace = true
