[package]
name = "aven-lsp"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
aven-check.workspace = true
aven-core.workspace = true
aven-fmt.workspace = true
aven-parser.workspace = true
tokio.workspace = true
tower-lsp.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true
